chapter-05/01-netpol/mynetpol-after.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mynetpol
spec:
  podSelector:
    matchLabels:
      app: mypod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod-a
    - podSelector:
        matchLabels:
          app: pod-b
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: pod-a
    - podSelector:
        matchLabels:
          app: pod-b
