chapter-05/01-netpol/mynetpol-before.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mynetpol
spec:
  podSelector:
    matchLabels:
      app: mypod
  policyTypes:
  - Ingress
  - Egress
